--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <hr class="my-8">
 
                     <h3 class="text-lg font-semibold mb-6">Manajemen Data Aplikasi</h3>
-                    <div class="space-y-4">
+                    <div class="space-y-4 mb-8">
                         <div>
                             <button id="backupDataBtn" class="w-full bg-green-600 text-white p-3 rounded-lg font-bold hover:bg-green-700 transition">Backup Data Aplikasi</button>
                             <p class="text-xs text-slate-500 mt-1">Unduh semua data aplikasi (produk, pelanggan, transaksi, dll.) sebagai file JSON.</p>
@@ -288,6 +288,14 @@
                              <p class="text-xs text-slate-500 mt-1">Pilih file backup JSON untuk me-restore data. PERHATIAN: Data saat ini akan diganti.</p>
                         </div>
                     </div>
+                    <hr class="my-8">
+                     <h3 class="text-lg font-semibold mb-6">Status Penyimpanan Lokal</h3>
+                     <div class="bg-slate-100 p-4 rounded-lg">
+                        <p class="text-sm text-slate-700">Estimasi Penggunaan localStorage Saat Ini:</p>
+                        <p id="localStorageUsage" class="text-lg font-bold text-blue-700">Menghitung...</p>
+                        <p class="text-xs text-slate-500 mt-2">Kapasitas total localStorage browser umumnya sekitar 5MB - 10MB per situs. Aplikasi ini tidak dapat mendeteksi sisa ruang secara akurat.</p>
+                     </div>
+
                 </div>
             </section>
         </main>
@@ -510,6 +518,7 @@ document.addEventListener('DOMContentLoaded', () => {
         localStorage.setItem(LS_KEYS.CUSTOMERS, JSON.stringify(pelangganList));
         localStorage.setItem(LS_KEYS.TRANSACTIONS, JSON.stringify(dailyTransactions));
         localStorage.setItem(LS_KEYS.SETTINGS, JSON.stringify(appSettings));
+        updateLocalStorageUsageDisplay(); // Update usage display after saving
     }
 
     function loadDataFromLocalStorage() { 
@@ -596,6 +605,28 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const backupDataBtn = document.getElementById('backupDataBtn');
     const restoreFileInput = document.getElementById('restoreFile');
+    const localStorageUsageEl = document.getElementById('localStorageUsage');
+
+
+    function calculateLocalStorageUsage() {
+        let totalBytes = 0;
+        for (const key in LS_KEYS) {
+            const item = localStorage.getItem(LS_KEYS[key]);
+            if (item) {
+                totalBytes += item.length * 2; // Approximation: UTF-16, 2 bytes per character
+            }
+        }
+        return totalBytes;
+    }
+
+    function updateLocalStorageUsageDisplay() {
+        if (localStorageUsageEl) {
+            const usageBytes = calculateLocalStorageUsage();
+            const usageKB = (usageBytes / 1024).toFixed(2);
+            localStorageUsageEl.textContent = `${usageKB} KB`;
+        }
+    }
+
 
     function refreshAllUI() {
         populateCategories();
@@ -611,6 +642,7 @@ document.addEventListener('DOMContentLoaded', () => {
         document.getElementById('shopName').value = appSettings.shopName;
         document.getElementById('shopAddress').value = appSettings.shopAddress;
         document.getElementById('shopPhone').value = appSettings.shopPhone;
+        updateLocalStorageUsageDisplay();
     }
     
     backupDataBtn.addEventListener('click', () => {
@@ -1299,7 +1331,6 @@ document.addEventListener('DOMContentLoaded', () => {
             showCustomAlert("Belum ada data produk terlaris untuk dibuatkan ide promosi.", "Info");
             return;
         }
-        // Extract product name, assuming format "Nama Produk (jumlah)"
         const productNameOnly = bestSellingProductText.split('(')[0].trim();
 
         const prompt = `Berikan 2-3 ide promosi sederhana dan kreatif untuk produk warung bernama "${productNameOnly}" untuk meningkatkan penjualan. Sampaikan dalam format daftar poin singkat.`;
@@ -1308,7 +1339,7 @@ document.addEventListener('DOMContentLoaded', () => {
         generatePromotionBtn.classList.add('gemini-btn-loading');
         generatePromotionBtn.disabled = true;
 
-        const promotionIdeas = await callGeminiAPI(prompt, null); // Pass null as buttonElement to handle loading separately
+        const promotionIdeas = await callGeminiAPI(prompt, null); 
 
         generatePromotionBtn.classList.remove('gemini-btn-loading');
         generatePromotionBtn.disabled = false;
@@ -1318,7 +1349,6 @@ document.addEventListener('DOMContentLoaded', () => {
         } else {
             const ideasHtml = promotionIdeas.split('\n').map(idea => {
                 if (idea.trim() === '') return '';
-                // Remove leading asterisks or numbers from Gemini's list format
                 return `<li class="text-sm text-slate-700 mb-1">${idea.replace(/^[\*\-\d\.]+\s*/, '')}</li>`;
             }).join('');
             promotionIdeasContainer.innerHTML = `
@@ -1753,6 +1783,7 @@ document.addEventListener('DOMContentLoaded', () => {
                         updatePiutangReport();
                     }
                     if (target === 'pelanggan') renderCustomerTable();
+                    if (target === 'pengaturan') updateLocalStorageUsageDisplay(); // Update usage when settings page is viewed
                 }
             });
         });
